Fix horizontal scrolling in mobile view

--- a/static/css/main.sass
+++ b/static/css/main.sass
@@ -261,7 +261,7 @@ a[href]:hover
         padding: 0
 
 .pagination
-    margin-top: 30px
+    margin: 0
 
 .site-footer
     width: 100%
@@ -353,6 +353,15 @@ $desktop-width: 1088px
         padding: 40px
 
 @media (max-width: $tablet-width)
+    #main-columns
+        margin: 0
+
+    #primary, #secondary
+        padding: 0
+
+    #secondary
+        margin-top: 20px
+
     .content-box
         padding: 20px 0 0
 
